# ptype

./: .clangd  .gitignore  LICENSE  Makefile.am  README.md  TODO  configure.ac
man/: Makefile.am  ptype.6.in
pconf/: Makefile.am  ptype.conf
pconf/quotes/: distribution
src/: Makefile.am  aart.h  c.c  config_parser.c  config_parser.h  confsetters.c  confsetters.h  def.h  drw.c  drw.h  loaders.c  loaders.h  utils.c  utils.h
